--- a/src/custom-input/custom-input.scss
+++ b/src/custom-input/custom-input.scss
@@ -90,6 +90,61 @@
       }
     }
   }
+
+  // range slider
+  .range-slider-field {
+    direction: ltr;
+
+    /* rzslider */
+    .rzslider {
+      margin: 20px auto 40px;
+
+      .rz-bubble {
+        top: 20px;
+        bottom: auto;
+        color: rgb(89, 89, 89);
+        font-size: 13px;
+        user-select: none;
+      }
+
+      .rz-bar {
+        background: rgb(242, 242, 242);
+      }
+
+      .rz-selection {
+        background: rgb(24, 190, 140);
+      }
+
+      .rz-pointer {
+        top: -9px;
+        width: 20px;
+        height: 20px;
+        outline: none;
+        background: rgb(24, 190, 140);
+        border-radius: 50px;
+        box-shadow: 0 0 15px #e0e0e0;
+
+        &::after {
+          top: 3px;
+          left: 3px;
+          width: 14px;
+          height: 14px;
+          border-radius: 50px;
+        }
+
+        &.rz-active::after {
+          background: rgb(24, 190, 140);
+        }
+      }
+    }
+  }
+}
+
+custom-input[type="rangeSlider"] {
+  .custom-input,
+  .input-container {
+    width: 100%;
+  }
 }
 
 // datepicker range
